<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:title="@string/pref_category_editor">

    <Preference
      app:iconSpaceReserved="false"
      app:key="pref_font_size"
      app:title="@string/pref_editor_fontsize"
      app:summary="@string/pref_editor_fontsize_summary" />

    <Preference
      app:iconSpaceReserved="false"
      app:key="pref_editortabsize"
      app:title="@string/pref_editor_indent"
      app:summary="@string/pref_editor_indent_summary" />

    <Preference
      app:iconSpaceReserved="false"
      app:key="pref_editorfont"
      app:title="@string/pref_editor_font"
      app:summary="@string/pref_editor_font_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="false"
      app:iconSpaceReserved="false"
      app:key="pref_stickyscroll"
      app:title="@string/pref_editor_stickyscroll"
      app:summary="@string/pref_editor_stickyscroll_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="true"
      app:iconSpaceReserved="false"
      app:key="pref_fontligatures"
      app:title="@string/pref_editor_fontligatures"
      app:summary="@string/pref_editor_fontligatures_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="false"
      app:iconSpaceReserved="false"
      app:key="pref_wordwrap"
      app:title="@string/pref_editor_wordwrap"
      app:summary="@string/pref_editor_wordwrap_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="true"
      app:iconSpaceReserved="false"
      app:key="pref_linenumbers"
      app:title="@string/pref_editor_linenumber"
      app:summary="@string/pref_editor_linenumber_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="false"
      app:iconSpaceReserved="false"
      app:key="pref_usetab"
      app:title="@string/pref_editor_usetab"
      app:summary="@string/pref_editor_usetab_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="true"
      app:iconSpaceReserved="false"
      app:key="pref_deleteemptylinefast"
      app:title="@string/pref_editor_deletelineonbackspace"
      app:summary="@string/pref_editor_deletelineonbackspace_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="true"
      app:iconSpaceReserved="false"
      app:key="pref_deletetabs"
      app:title="@string/pref_editor_deleteindentonbackspace"
      app:summary="@string/pref_editor_deleteindentonbackspace_summary" />

  </PreferenceCategory>

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:title="@string/pref_category_editor_tabs">

    <SwitchPreferenceCompat
      app:defaultValue="false"
      app:iconSpaceReserved="false"
      app:key="pref_auto_save"
      app:title="@string/pref_editor_tabs_autosave"
      app:summary="@string/pref_editor_tabs_autosave_summary" />

  </PreferenceCategory>

</PreferenceScreen>