<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <PreferenceCategory
    app:iconSpaceReserved="false"
    app:title="@string/pref_category_aparence">

    <com.raredev.vcspace.preferences.UIModePreference
      app:icon="@drawable/ic_theme"
      app:key="pref_aparence_uimode_key"
      app:title="@string/pref_aparence_uimode"
      app:summary="@string/pref_aparence_uimode_summary" />

    <SwitchPreferenceCompat
      app:defaultValue="true"
      app:icon="@drawable/ic_palette"
      app:key="pref_aparence_materialyou_key"
      app:title="@string/pref_aparence_materialyou"
      app:summary="@string/pref_aparence_materialyou_summary" />
  </PreferenceCategory>

</PreferenceScreen>